--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "stripe": "^8.67.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "dotenv": "^16.4.3"
   }
 }
